[package]
name = "dionysus"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
chrono = "0.4.38"
time = "0.3.37"
yahoo_finance_api = {"version" = "2.4.0", features = ["blocking"]}
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
log = "0.4.25"
ta = "0.5.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
regex = "1.11.1"
