[package]
name = "dionysus"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
time = "0.3.37"
yahoo_finance_api = {"version" = "2.4.0", features = ["blocking"]}
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
log = "0.4.25"
ta = "0.5.0"
binance = "0.21.0"
regex = "1.11.1"
threadpool = "1.8.1"
slog = "2.7.0"
slog-scope = "4.4.0"
slog-term = "2.9.1"
serde = "1.0.219"
serde_json = "1.0"
