[package]
name = "midas"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
dionysus = { path = "../dionysus" }
clap = { version = "4.5.36", features = ["derive"] }
tokio = { version = "0.2.0", features = ["full"] }
env_logger = "0.11.6"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["all-widgets"]}
random_color = "1.0.0"
slog = "2.7.0"
slog-scope = "4.4.0"
tui-logger = { version = "0.14.5", features = ["slog-support"]}
serde = "1.0.219"
serde_json = "1.0"
tui-prompts = "0.5.0"
